[package]
name = "dht_chord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }

num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8.0"

serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }

chrono = "0.4.19"

